# TestK8s

./: Dockerfile  LICENSE  README.md  deployment.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
testk8s/: main.py
