[tool.poetry]
name = "testk8s"
version = "0.1.0"
description = ""
authors = ["Tim Meiwald <tim.meiwald@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
